# fast_rafa

./: .gitignore  Dockerfile  README.md  banco-doacao.mermaid  compose.yaml  database.sqbpro  dockerfile  entrypoint.sh  fluxo-sistema-completo.mermaid  pyproject.toml  tailwind.config.js
.ignore user_tests_old/: test_1create_user.py  test_2read_user.py  test_2read_users.py  test_3update_user.py  test_4delete_user.py  test_app.py
fast_rafa/: __init__.py  app.py  database.py  entrega.py  evento.py  favorito.py  lista_de_interesse.py  mensagem.py  organizacao.py  post.py  security.py  settings.py  user.py
fast_rafa/.schemas/: chat.py
fast_rafa/core/: database.py  database_seed.py  logger.py  security.py
fast_rafa/messages/: error_messages.py
fast_rafa/models/: __init__.py  calendar.py  category.py  delivery.py  event.py  favorite.py  message.py  message_it.py  organization.py  post.py  seed.py  user.py  watchlist.py
fast_rafa/modules/: __init__.py
fast_rafa/modules/auth/: routes.py  schemas.py
fast_rafa/modules/calendars/: models.py  routes.py
fast_rafa/modules/categories/: models.py  routes.py  schemas.py
fast_rafa/modules/categories_main/: models.py  routes.py  schemas.py  services.py
fast_rafa/modules/deliveries/: models.py  routes.py
fast_rafa/modules/events/: models.py  routes.py  schemas.py  services.py
fast_rafa/modules/favorites/: models.py  routes.py
fast_rafa/modules/home/: routes.py
fast_rafa/modules/main/: routes.py
fast_rafa/routes/: __init__.py  auth.py  auth_routes.py  calendar.py  category.py  delivery.py  event.py  favorite.py  message.py  message_it.py  organization.py  post.py  seed.py  user.py  watchlist.py
fast_rafa/schemas/: auth.py  post.py  user.py
fast_rafa/seeds/: __init__.py  categories.py  categories_main.py  events.py  organizations.py  posts.py  seed.py  undo.py  users.py
fast_rafa/templates/: chat.html  events.html  home.html  home_backup.html  login.html  organizations.html  post.html  posts.html  profile.html  search.html  stats.html
fast_rafa/utils/: __init__.py  error_messages.py  funcs.py  s3.py  sel.py  timezone.py
migrations/: env.py
migrations/versions/: 0b28466ecfc3_incluir_username_no_user.py  1b50a1d7c011_create_new_tables.py  2c4acc8ac0ba_update_user.py  3838bf7270ca_atualizar_favorite.py  3fafb1dc3ddd_create_new_tables.py  501a20207598_adicionando_novo_campo_de_usuário.py  5256a6de13f3_update_data_validade.py  837f60108d23_adicionando_ondelete_cascade.py  86bb09755bbf_create_new_tables.py  b55a7f4dacdd_criar_tabelas.py  c9a2e299197a_create_new_tables.py  ef8846c9df31_update_na_url_da_imagem_do_perfil.py  fafc40bf8718_create_tables.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
tests/user/: test_1create_user.py  test_2read_user.py  test_2read_users.py  test_3update_user.py  test_4delete_user.py
(+61 files in other folders)
