[tool.poetry]
name = "fast-rafa"
version = "0.1.0"
description = "Sistema de Redistribuição e Apoio Alimentar"
authors = ["Eduardo Lira <eduardolirainfo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.1"
httpx = "^0.27.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_rafa/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_rafa -vv'
post_test = 'coverage html'
seed = "python -c 'from fast_rafa.seeds import seed_all'"
undo = "python -c 'from fast_rafa.seeds import undo_all'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
